# DispatcherOpenCL

./: 3101.csv  BitonicSorting.h  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  FluidiCL.h  GPURes12102018.csv  GPURes_atomics.csv  GPURes_local.csv  Main.cpp  Main.h  Makefile  Q16  Query6.h  README.md  TPCH.csv  TPCH1.csv  aggregate_variant test.h  aggregate_variant.h  aggregate_variant_branch_test.h  aggregate_variant_old_test.h  bench  cmake_install.cmake  componentModel.h  cu_file.cpp  cuttlefish.h  damon.h  distribuition0.csv  exec_engine_comparison.cbp  execution.sh  globalResLaptop.csv  grouped_aggregate_dual.h  hashing_test.h  main.cpp  openCLDispatcher  openCLDispatcher.cbp  ordered_aggregation.h  ordered_aggregation_test.h  part.csv  partial_sequential_aggregate.cl  (+5 more)
data/tpch/sf1/cached/: customer_c_acctbal  customer_c_address  customer_c_comment  customer_c_custkey  customer_c_mktsegment  customer_c_name  customer_c_nationkey  customer_c_phone  lineitem_l_commitdate  lineitem_l_linenumber  lineitem_l_linestatus  lineitem_l_orderkey  lineitem_l_partkey  lineitem_l_receiptdate  lineitem_l_returnflag  lineitem_l_shipdate  lineitem_l_suppkey  nation_n_comment  nation_n_name  nation_n_regionkey  orders_o_clerk  part_p_mfgr  (+26 more)
googletest-build/: CTestTestfile.cmake  Makefile  cmake_install.cmake  googletest-distribution.cbp
googletest-build/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake  gmock.cbp
googletest-build/googlemock/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake  gtest.cbp
googletest-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
googletest-download/googletest-prefix/tmp/: googletest-gitclone.cmake  googletest-gitupdate.cmake
include/: BitonicSort.h  DAG_query.h  Environment.h  ImportKernelSource.h  Importkernel.h  base_kernel.h  boostGraphs.h  data_api.h  distribution.h  globals.h  graph_api.h  headers.h  kernelGraphs.h  kernelTestGraph.h  kernel_api.h  pipeline.h  runtime_api.h
include/Bandits/: BanditEnvironment.h  VowpalEnvironment.h  agents.h  bandit.h  policy.h
include/Bandits/PythonBandit/: standardStochasticBandits.py  vwContextualBandits.py
include/Execution/: Environment.h
include/benchmarks/tpch/: Queries.hpp
include/common/algebra/: Operators.cpp  Operators.hpp  Pipeline.cpp  Pipeline.hpp  Types.cpp
include/common/runtime/: Barrier.hpp  Concurrency.cpp  Concurrency.hpp  Database.cpp  Database.hpp  Hash.hpp  Hashmap.cpp  Hashmap.hpp  HashmapSmall.hpp  Import.cpp  MemoryPool.cpp  Mmap.hpp  PartitionedDeque.hpp  Query.hpp  Stack.hpp  String.cpp
include/dispatcher/: Environment.h  ImportKernelSource.h  data_api.h  globals.h  graph_api.h  headers.h  kernelTestGraph.h  kernel_api.h  runtime_api.h
include/dispatcher/kernels/: add.cl  copy.cl  interleaved_grouped_aggregation.cl  inverse_ps_aggregation.cl  predicated_aggregate.cl
include/kernel_class/: logical.h  selection.h
include/kernel_files/: logical_block.h  selection_block.h  selection_coalesced.h
include/kernel_generator/: selection.h  selection_generator.h
include/pipeline/: nodeInfo.h  pipeline_api.h
include/primitives/: primitiveKernel.h
include/primitives/VariantTest/: MergeVariantTest.h  VariantTesting.h
include/primitives/header/: Aggregating.h  Aggregation.h  Aggregation1.h  BitonicSorting.h  Merging.h
include/primitives/kernel/: Aggregate.cl  Aggregate1.cl  BitMasked.cl  BitonicSort.cl  IndexValue.cl  Merge.cl
include/primitives/source/: Aggregation.cpp  BitonicSorting.cpp  Merging.cpp
include/vectorwise/: Primitives.hpp
kernels/: SeqGen.cl  Test.cl  agg_atomic.cl  bitonicSort.cl  branched_aggregate.cl  branched_local.cl  branched_local_sync.cl  branched_position_aggregate.cl  ga_kernel_one.cl  ga_kernel_two.cl  intra_warp_ps.cl  local_branched_aggregate.cl  local_global.cl  logical_block.cl  nestedLoop.cl  selection.cl  selection_block.cl  selection_interleaved.cl  split_bitmap.cl
kernels/hash_kernels/hash_insert/: linear_probing.cl  linear_probing_aggregate.cl
kernels/hash_kernels/hash_probe/: linear_probing_probe.cl
kernels/helper/: zero_kernel.cl
kernels/mapper/: _kernel_bitonic_sort_position.cl  gatherPrimitive.cl  materialize_block.cl  scatterPrimitive.cl  selection_block.cl  split_block.cl
kernels/ordered_aggregate_kernels/: CAS_atomic.cl  He_method.cl  atomic_aggregate_local.cl  atomic_aggregate_local_test.cl  atomic_sequential_aggregate.cl  atomic_sequential_aggregate_GPU.cl  atomic_sequential_aggregate_GPU_local.cl  atomic_sequential_aggregate_local.cl  atomic_sequential_aggregate_local_test.cl  barrier_based.cl  branched_aggregate.cl  branched_aggregate_GPU.cl  branched_aggregate_local.cl  branched_aggregate_local_test.cl  partial_atomic_aggregate.cl  private_array_sequential_aggregate.cl  private_array_sequential_aggregate_GPU.cl  private_array_sequential_aggregate_local.cl  private_array_sequential_aggregate_local_test.cl
kernels/ordered_aggregate_kernels/No_Atomics/: FinalResult.cl  GeneratePosList.cl  He_method.cl  find_sum.cl
kernels/ordered_aggregate_kernels/two_step/: FinalAggCompute.cl  PartialAggCompute.cl
kernels/prefix_sum/: FinalPS.cl  atomic_aggregate.cl  interOff.cl  partialPS.cl
kernels/prefix_sum/Parallel_prefix_sum/: downSweep.cl
kernels/prefix_sum1/: IndexValue.cl  partialPS.cl
kernels/sort_kernels/: BitonicSort_POSLIST.cl
operator/: AggregatebenchMark.h  OA_graph.h  aggregateTests.h  evaluate_atomics.h  operator.h  ordered_aggregation.h  ordered_aggregation1.h  selection.h
operator/testKernels/: atomic_aggregate.cl  atomic_local_aggregate_ordered.cl  barrier_reduce.cl  barrier_reduce_location.cl  barrier_reduce_with_atomics.cl  branched_aggregate.cl  branched_aggregate_ordered.cl  direct_mapped_unordered.cl  direct_mapped_unordered_local.cl  fifo_unordered.cl  private_array_sequential_aggregate.cl  private_array_sequential_aggregate_local.cl  two_set_associative_unordered.cl
scripts/: scalingCRC32_64bit
src/: bench.cpp
src/benchmarks/primitives/: run.cpp
src/benchmarks/tpch/: run.cpp
src/test/: TPCH.hpp  tpch.cpp  tpch_expected.cpp
(+29 files in other folders)
